tests/errors/lex_number.java
public class lex_number {
	float c = 432j4532f0s;
}
